@@ -1,3 +1,10 @@
+2003-05-20  William A. Perkins  <william.perkins@pnl.gov>
+
+	* test/benchmark/jda/gage_control.dat: add some gages to compare
+
+	* mass2_main_025.f90: reference to global 'iblock' removed in
+	fillghost_hydro 
+
 2003-05-16  William A. Perkins  <william.perkins@pnl.gov>
 
 	* misc_vars_module.f90: filenames too short for SAC runs
